@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2010  Vasco Nunes, Piotr Ożarowski
 
 
+2010-01-09  Piotr Ożarowski
+	* MyMoviesIt movie plugin updated (thanks to FiloSottile)
+
 2010-01-06  Piotr Ożarowski
 	* Some cleanups
 
